fixing overflow bug

--- a/src/style.css
+++ b/src/style.css
@@ -73,10 +73,11 @@
       }
 
       #features figure {
-        width: 390px;
-        height: 300px;
+        max-width: 390px;
+        aspect-ratio: 390 / 300;
+        width: 100%;
         background-size: 100%;
-        background-position-x: -80px;
+        background-position-x: -40px;
         background-repeat: no-repeat;
       }
       
